# RX1

./: .gitignore  README.md  TODO.md
install/: local_setup.sh  setup.sh
install/feetech_lib/include/feetech_lib/: SMS_STS.h
install/feetech_lib/share/feetech_lib/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rx1_bringup/share/rx1_bringup/: package.bash  package.zsh
install/rx1_description/share/rx1_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rx1_description/share/rx1_description/launch/: urdf.launch.py
install/rx1_description/share/rx1_description/rviz/: urdf.rviz
install/rx1_gazebo/share/ament_index/resource_index/package_run_dependencies/: rx1_gazebo
install/rx1_gazebo/share/rx1_gazebo/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rx1_gazebo/share/rx1_gazebo/launch/: rx1_gazebo.launch.py
install/rx1_gazebo/share/rx1_gazebo/scripts/: controller_example.py  controller_gui_example.py
install/rx1_ik/share/rx1_ik/: package.bash  package.zsh
install/rx1_motor/share/ament_index/resource_index/parent_prefix_path/: rx1_motor
install/rx1_motor/share/rx1_motor/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rx1_motor/share/rx1_motor/cmake/: ament_cmake_export_targets-extras.cmake  export_rx1_motorExport-noconfig.cmake  export_rx1_motorExport.cmake
install/rx1_motor/share/rx1_motor/include/rx1_motor/: rx1_motor.hpp
install/rx1_motor/share/rx1_motor/launch/: rx1_motor.launch.py
install/rx1_moveit_config/share/ament_index/resource_index/package_run_dependencies/: rx1_moveit_config
install/rx1_moveit_config/share/rx1_moveit_config/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rx1_moveit_config/share/rx1_moveit_config/cmake/: rx1_moveit_configConfig.cmake
install/rx1_moveit_config/share/rx1_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml
install/rx1_moveit_config/share/rx1_moveit_config/launch/: demo.launch.py
log/: latest_build  latest_list
src/feetech_lib/: CMakeLists.txt
src/feetech_lib/src/: SMS_STS.cpp
src/rx1/rx1/: CMakeLists.txt  package.xml
src/rx1/rx1_bringup/: CMakeLists.txt  package.xml
src/rx1/rx1_bringup/launch/: bringup.launch.py
src/rx1/rx1_bringup/launch/includes/: description.launch.py  gemini2.launch.py
src/rx1/rx1_bringup/scripts/: play_bags.py
src/rx1/rx1_description/: CMakeLists.txt  package.xml
src/rx1/rx1_description/launch/: record_urdf_test.launch.py
src/rx1/rx1_description/rviz/: urdf.rviz
src/rx1/rx1_description/urdf/: rx1.harmonic.urdf.xacro  rx1.urdf.xacro  rx1_optimized.harmonic.urdf.xacro  rx1_optimized.urdf.xacro
src/rx1/rx1_gazebo/: CMakeLists.txt  package.xml
src/rx1/rx1_gazebo/config/: rx1_harmonic_controllers.yaml
src/rx1/rx1_gazebo/launch/: rx1_gazebo.launch.py  rx1_gazebo_rviz.launch.py
src/rx1/rx1_gazebo/rviz/: gazebo.rviz
src/rx1/rx1_gazebo/worlds/: rx1_table_world.sdf
src/rx1/rx1_ik/: CMakeLists.txt  package.xml
src/rx1/rx1_ik/config/: ik.ros2.yaml  ik_marker.ros2.yaml  ik_traj.ros2.yaml
src/rx1/rx1_ik/include/rx1_ik/: rx1_ik.h
src/rx1/rx1_ik/launch/: rx1_ik_apriltag.launch.py  rx1_ik_marker.launch.py  rx1_ik_traj.launch.py
src/rx1/rx1_ik/src/: rx1_ik_node.cpp
src/rx1/rx1_ik/src/rx1_ik/: rx1_ik.cpp
src/rx1/rx1_motor/: CMakeLists.txt  package.xml
src/rx1/rx1_motor/launch/: rx1_motor.launch
src/rx1/rx1_motor/src/: rx1_motor_node.cpp
src/rx1/rx1_motor/src/rx1_motor/: rx1_motor.cpp
src/rx1/rx1_motor_lib/: CMakeLists.txt  package.xml
src/rx1/rx1_moveit_config/: CMakeLists.txt  package.xml
src/rx1/rx1_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  moveit_controllers_gazebo.yaml  ompl_planning.yaml  rx1.srdf  sensors_3d.yaml
src/rx1/rx1_moveit_config/launch/: demo.launch.py  gazebo_demo.launch.py
src/rx1/rx1_moveit_config/scripts/: fake_joint_trajectory_controller.py  joint_state_timestamp_republisher.py  wait_for_sim_controller.py
