<?xml version="1.0"?>
<package format="3">
  <name>rx1_bringup</name>
  <version>1.2.5</version>
  <description>Launch files for starting the rx1 robot</description>
  <license>MIT</license>
  <author email="lethiic@gmail.com">lethic</author>
  <maintainer email="lethiic@gmail.com">lethic</maintainer>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rx1_description</exec_depend>
  <exec_depend>rx1_motor</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
