<?xml version="1.0"?>
<package format="3">
  <name>rx1_gazebo</name>
  <version>1.2.5</version>
  <description>rx1 humanoid gazebo simulation</description>
  <license>MIT</license>
  <author email="lethiic@gmail.com">lethic</author>
  <maintainer email="lethiic@gmail.com">lethic</maintainer>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>rx1_description</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
