<?xml version="1.0"?>
<package format="3">
  <name>rx1_ik</name>
  <version>1.2.5</version>
  <description>Inverse Kinematics of the RX1 robot</description>
  <license>MIT</license>
  <author email="lethiic@gmail.com">lethic</author>
  <maintainer email="lethiic@gmail.com">lethic</maintainer>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>ik_solver_lib</depend>
  <depend>interactive_markers</depend>
  <depend>kdl_parser</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_kdl</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
