<?xml version="1.0"?>
<package format="3">
  <name>rx1_motor</name>
  <version>1.2.5</version>
  <description>rx1 motor hardware control</description>
  <license>MIT</license>
  <author email="lethiic@gmail.com">lethic</author>
  <maintainer email="lethiic@gmail.com">lethic</maintainer>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>feetech_lib</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
